# Real-Time-Fraud-Detection-Analytics-Pipeline

./: .gitignore  README.md  __init__.py  analytics.py  dashboard.py  database.py  flagged_transactions.csv  fraud_detection.db  pyproject.toml  run_dashboard.ps1  run_validate.ps1  simulator.py  sql_rules.md  transactions.csv  validate_pipeline.py
.github/workflows/: keep_awake.yml
